feat(backend): integrate Keycloak account provisioning for students and teachers
Add dedicated student and teacher creation requests, generated account credential responses, secure password generation, and Keycloak administration services and configuration; update student and teacher entities, repositories, services, controllers, DTOs, mappers, department lookup, Maven dependencies, and application properties to automatically create and manage Keycloak accounts using department names.